[package]
name = "fastdl-hc"
version = "0.1.0"
edition = "2024"

[dependencies]
ab_glyph = "0.2"
image = { version = "*", default-features = false, features = ["jpeg"] }
imageproc = { version = "0.25", default-features = false }
rand = "0.8.5"
serde = "1"
serde_json = "1"
tiny_http = "0.12"

[profile.release]
lto = true
